--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.4.0",
   "main": "build/index.cjs.js",
   "module": "build/index.esm.js",
-  "types": "build/index.d.ts",
+  "types": "build/build/index.d.ts",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/gmcfall/react-firebase-state.git"
