--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@gmcfall/react-firebase-state",
-  "version": "2.0.0",
+  "version": "3.0.0-rc.1",
   "main": "build/index.cjs.js",
   "module": "build/index.esm.js",
   "types": "build/build/index.d.ts",
@@ -18,7 +18,8 @@
     "react-dom": "^18.2.0"
   },
   "scripts": {
-    "build": "rollup --config"
+    "build": "rollup --config",
+    "doc": "typedoc"
   },
   "eslintConfig": {
     "extends": [
@@ -38,14 +39,15 @@
     ]
   },
   "devDependencies": {
-    "typescript": "^4.9.5",
-    "@types/node": "^16.18.12",
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
     "@rollup/plugin-commonjs": "^24.0.1",
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@rollup/plugin-typescript": "^11.0.0",
+    "@types/node": "^16.18.12",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
     "rollup": "^2.79.1",
-    "rollup-plugin-peer-deps-external": "^2.2.4"
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "typedoc": "^0.23.25",
+    "typescript": "^4.9.5"
   }
 }
